5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4352/executions/1613_1801.log
== TEST (2019-03-29 12:43:04) 
-- CODE:
objeto = input("digite um objeto: ")
numero = input("digite um número: ")
feitiço = objeto*numero
print("abra" + feitiço)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    feitiço = objeto*numero
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:43:19) 
-- CODE:
objeto = input("digite um objeto: ")
numero = input("digite um numero: ")
feitiço = objeto*numero
print("abra" + feitiço)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    feitiço = objeto*numero
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:43:40) 
-- CODE:
objeto = input("digite um objeto: ")
numero = input("digite um numero: ")
feitiço = objeto*numero
print("abra" + feitiço)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    feitiço = objeto*numero
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:43:55) 
-- CODE:
objeto = input("digite um objeto: ")
numero = input("digite um numero: ")
print("abra" + objeto * numero)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("abra" + objeto * numero)
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:44:22) 
-- CODE:
objeto = input("digite um objeto: ")
numero = input("digite um numero: ")
print("abra" + objeto * numero)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("abra" + objeto * numero)
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:44:42) 
-- CODE:
objeto = input("digite um objeto: ")
numero = input("digite um numero: ")
print("'abra' + objeto * numero")

-- OUTPUT:
'abra' + objeto * numero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:44:49) 
-- CODE:
objeto = input("digite um objeto: ")
numero = input("digite um numero: ")
print("'abra' + objeto * numero")

-- OUTPUT:
'abra' + objeto * numero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:45:12) 
-- CODE:
objeto = input("digite um objeto: ")
numero = input("digite um numero: ")
print(str("abra" + objeto * numero)

-- ERROR:
File "XXXX", line 4
    
                                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:45:18) 
-- CODE:
objeto = input("digite um objeto: ")
numero = input("digite um numero: ")
print(str("abra" + objeto * numero)

-- ERROR:
File "XXXX", line 4
    
                                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:45:24) 
-- CODE:
objeto = input("digite um objeto: ")
numero = input("digite um numero: ")
print(str("abra" + objeto * numero)
-- ERROR:
File "XXXX", line 4
    
                                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:46:03) 
-- CODE:
objeto = str(input("digite um objeto: ")
numero = int(input("digite um numero: ")
print("abra" + objeto * numero)
-- ERROR:
File "XXXX", line 2
    numero = int(input()
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:46:16) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra" + objeto * numero)
-- OUTPUT:
abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 12:46:22) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra" + objeto * numero)
-- EXECUTION TIME:
0.148243
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abralivrolivrolivrolivrolivrolivrolivrolivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abracarrocarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abracaixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:46:26) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra" + objeto * numero)
-- OUTPUT:
abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 12:47:03) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra" + objeto * numero)
-- EXECUTION TIME:
0.199812
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abralivrolivrolivrolivrolivrolivrolivrolivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abracarrocarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abracaixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:47:03) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra" + objeto * numero)
-- OUTPUT:
abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 12:47:05) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra" + objeto * numero)
-- EXECUTION TIME:
0.140159
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abralivrolivrolivrolivrolivrolivrolivrolivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abracarrocarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abracaixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:47:05) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra" + objeto * numero)
-- OUTPUT:
abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 12:47:06) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra" + objeto * numero)
-- EXECUTION TIME:
0.140622
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abralivrolivrolivrolivrolivrolivrolivrolivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abracarrocarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abracaixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:47:06) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra" + objeto * numero)
-- OUTPUT:
abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:47:07) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra" + objeto * numero)
-- OUTPUT:
abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 12:47:07) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra" + objeto * numero)
-- EXECUTION TIME:
0.196537
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abralivrolivrolivrolivrolivrolivrolivrolivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
digite um objeto: digite um numero: abracarrocarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
digite um objeto: digite um numero: abracaixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:47:08) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra" + objeto * numero)
-- OUTPUT:
abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 12:47:08) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra" + objeto * numero)
-- EXECUTION TIME:
0.138412
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abralivrolivrolivrolivrolivrolivrolivrolivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
digite um objeto: digite um numero: abracarrocarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
digite um objeto: digite um numero: abracaixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:47:09) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra" + objeto * numero)
-- OUTPUT:
abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 12:47:09) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra" + objeto * numero)
-- EXECUTION TIME:
0.153779
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abralivrolivrolivrolivrolivrolivrolivrolivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
digite um objeto: digite um numero: abracarrocarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
digite um objeto: digite um numero: abracaixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:48:01) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra" + objeto * numero " ")
-- ERROR:
File "XXXX", line 3
    print("abra" + objeto * numero " ")
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:48:10) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra" + " " objeto * numero)
-- ERROR:
File "XXXX", line 3
    print("abra" + " " objeto * numero)
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:48:15) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra" + objeto * numero)
-- OUTPUT:
abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 12:48:29) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra" + objeto * numero)
-- EXECUTION TIME:
0.26499
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abralivrolivrolivrolivrolivrolivrolivrolivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abracarrocarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abracaixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:48:30) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra" + objeto * numero)
-- OUTPUT:
abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:49:37) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra" + objeto * numero + " ")
-- OUTPUT:
abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 12:49:46) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra" + objeto * numero + " ")
-- EXECUTION TIME:
0.156508
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abralivrolivrolivrolivrolivrolivrolivrolivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abracarrocarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abracaixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:49:46) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra" + objeto * numero + " ")
-- OUTPUT:
abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:49:56) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra" + " " + objeto * numero)
-- OUTPUT:
abra livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:50:18) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra" + objeto * numero + " ")
-- OUTPUT:
abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:50:25) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra" + objeto * numero + " ")
-- OUTPUT:
abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:50:32) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra" + " " + objeto * numero + " ")
-- OUTPUT:
abra livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:50:38) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra" + " " + objeto * numero + " ")
-- OUTPUT:
abra livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 12:50:38) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra" + " " + objeto * numero + " ")
-- EXECUTION TIME:
0.132631
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abra livrolivrolivrolivrolivrolivrolivrolivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abra carrocarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:51:14) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra" isso
		+ objeto * numero + " ")
-- ERROR:
File "XXXX", line 3
    print("abra" isso
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:51:22) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra" isso + objeto * numero + " ")

-- ERROR:
File "XXXX", line 3
    print("abra" isso + objeto * numero + " ")
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:51:28) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra" + objeto * numero + " ")


-- OUTPUT:
abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:52:02) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print(" " + "abra" + objeto * numero) 


-- OUTPUT:
abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:52:07) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print(" " + "abra" + objeto * numero) 


-- OUTPUT:
abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:53:29) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra" + objeto * numero + " ") 

-- OUTPUT:
abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:53:49) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra" + objeto + " " * numero) 

-- OUTPUT:
abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:54:11) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra" + objeto * numero) + " "

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("abra" + objeto * numero) + " "
TypeError: unsupported operand type(s) for +: 'NoneType' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:54:17) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra" + objeto * numero) + " "

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("abra" + objeto * numero) + " "
TypeError: unsupported operand type(s) for +: 'NoneType' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:56:10) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra" + objeto * numero) 

-- OUTPUT:
abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:04:42) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print(" abra " + objeto * numero) 

-- OUTPUT:
abra livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:04:53) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra " + objeto * numero) 

-- OUTPUT:
abra livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:04:57) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra " + objeto * numero) 

-- OUTPUT:
abra livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:05:04) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra " + objeto * numero) 

-- OUTPUT:
abra livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:06:52) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print(+" " + "abra" + objeto * numero) 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(+" " + "abra" + objeto * numero) 
TypeError: bad operand type for unary +: 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:07:00) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print(" " + "abra" + objeto * numero) 

-- OUTPUT:
abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:07:07) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print(" " + "abra" + objeto * numero) 

-- OUTPUT:
abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:07:40) 
-- CODE:
objeto = str(input("digite um objeto: + " " "))
numero = int(input("digite um numero: "))
print("abra" + objeto * numero) 

-- OUTPUT:
digite um objeto: +  abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:08:10) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra" + objeto * numero + ' ') 

-- OUTPUT:
abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:08:15) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra" + objeto * numero + ' ') 

-- OUTPUT:
abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:19:05) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra" + objeto * numero) 

-- OUTPUT:
abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:19:31) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra" + objeto * numero + " ") 

-- OUTPUT:
abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 12:19:37) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra" + objeto * numero + " ") 

-- EXECUTION TIME:
0.166313
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abralivrolivrolivrolivrolivrolivrolivrolivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abracarrocarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abracaixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:19:59) 
-- CODE:
objeto = str(input("digite um objeto: ") + " ")
numero = int(input("digite um numero: ") + " ")
print("abra" + objeto * numero) 

-- OUTPUT:
abralivro livro livro livro livro livro livro livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:20:19) 
-- CODE:
objeto = str(input("digite um objeto: ") + " ")
numero = int(input("digite um numero: "))
print("abra" + objeto * numero) 

-- OUTPUT:
abralivro livro livro livro livro livro livro livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 12:22:01) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra " + objeto * numero) 

-- EXECUTION TIME:
0.254179
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abra livrolivrolivrolivrolivrolivrolivrolivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abra carrocarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:22:02) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra " + objeto * numero) 

-- OUTPUT:
abra livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 12:22:15) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra " + objeto * numero) 

-- EXECUTION TIME:
0.123705
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abra livrolivrolivrolivrolivrolivrolivrolivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abra carrocarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:23:06) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra" + objeto * numero) 
print("abra" + objeto * numero) 
print("abra" + objeto * numero) 
print("abra" + objeto * numero) 

-- OUTPUT:
abralivrolivrolivrolivrolivrolivrolivrolivro
abralivrolivrolivrolivrolivrolivrolivrolivro
abralivrolivrolivrolivrolivrolivrolivrolivro
abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:23:21) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra " + objeto * numero) 
print("abra " + objeto * numero) 
print("abra " + objeto * numero) 
print("abra " + objeto * numero) 

-- OUTPUT:
abra livrolivrolivrolivrolivrolivrolivrolivro
abra livrolivrolivrolivrolivrolivrolivrolivro
abra livrolivrolivrolivrolivrolivrolivrolivro
abra livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 12:23:26) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra " + objeto * numero) 
print("abra " + objeto * numero) 
print("abra " + objeto * numero) 
print("abra " + objeto * numero) 

-- EXECUTION TIME:
0.179188
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abra livrolivrolivrolivrolivrolivrolivrolivro
abra livrolivrolivrolivrolivrolivrolivrolivro
abra livrolivrolivrolivrolivrolivrolivrolivro
abra livrolivrolivrolivrolivrolivrolivrolivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abra carrocarro
abra carrocarro
abra carrocarro
abra carrocarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abra caixa
abra caixa
abra caixa
abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:09:04) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra" + " " + objeto * numero) 


-- OUTPUT:
abra livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:09:11) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra" + " " + objeto * numero) 


-- OUTPUT:
abra livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:09:12) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra" + " " + objeto * numero) 


-- EXECUTION TIME:
0.158809
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abra livrolivrolivrolivrolivrolivrolivrolivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abra carrocarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:09:14) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra" + " " + objeto * numero) 


-- OUTPUT:
abra livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:09:14) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print("abra" + " " + objeto * numero) 


-- EXECUTION TIME:
0.164952
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abra livrolivrolivrolivrolivrolivrolivrolivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
digite um objeto: digite um numero: abra carrocarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
digite um objeto: digite um numero: abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:10:31) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print(("abra" + objeto + " ")* numero)


-- OUTPUT:
abralivro abralivro abralivro abralivro abralivro abralivro abralivro abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:10:36) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print(("abra" + objeto + " ")* numero)


-- EXECUTION TIME:
0.234173
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abralivro abralivro abralivro abralivro abralivro abralivro abralivro abralivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abracarro abracarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abracaixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:10:38) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print(("abra" + objeto + " ")* numero)


-- OUTPUT:
abralivro abralivro abralivro abralivro abralivro abralivro abralivro abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:10:54) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print(("abra " + objeto + " ")* numero)


-- OUTPUT:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:10:58) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print(("abra " + objeto + " ")* numero)


-- EXECUTION TIME:
0.30416
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abra carro abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:11:09) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print(("Abra " + objeto + " ")* numero)


-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:11:16) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print(("Abra " + objeto + " ")* numero)


-- EXECUTION TIME:
0.144675
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:11:26) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print(("Abra " + objeto + " ")* numero)


-- EXECUTION TIME:
0.197775
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:11:27) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print(("Abra " + objeto + " ")* numero)


-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:11:33) 
-- CODE:
objeto = str(input("digite um objeto: "))
numero = int(input("digite um numero: "))
print(("Abra " + objeto + " ")* numero)


-- EXECUTION TIME:
0.137454
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
